Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/8062359/UnresolvableClassNPEInAttrTest.out
UnresolvableClassNPEInAttrTest.java:11:13: compiler.err.cant.resolve.location: kindname.class, Undefined, , , (compiler.misc.location: kindname.class, UnresolvableClassNPEInAttrTest, null)
1 error
